--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>iQOO Z6 Lite Exclusive App</title>
+    <title>iQOO Exclusive App</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -16,16 +16,25 @@
     <div id="content"></div>
     
     <script>
-        function isIQOOZ6Lite() {
-            return navigator.userAgent.includes("iQOO Z6 Lite");
+        function isIQOODevice() {
+            const userAgent = navigator.userAgent;
+            // Check for specific iQOO models and Android version
+            return (
+                userAgent.includes("vivo/iQOO") &&
+                (userAgent.includes("I2214") || 
+                 userAgent.includes("I2217") ||
+                 userAgent.includes("I2223") ||
+                 userAgent.includes("I2302") ||
+                 userAgent.includes("I2018"))
+            );
         }
 
         window.onload = function() {
             const contentDiv = document.getElementById('content');
-            if (isIQOOZ6Lite()) {
-                contentDiv.innerHTML = "<h1>Welcome to the iQOO Z6 Lite Exclusive App!</h1>";
+            if (isIQOODevice()) {
+                contentDiv.innerHTML = "<h1>Welcome to the iQOO Exclusive App!</h1>";
             } else {
-                contentDiv.innerHTML = "<h1>Access Denied</h1><p>This app is only available on iQOO Z6 Lite.</p>";
+                contentDiv.innerHTML = "<h1>Access Denied</h1><p>This app is only available on specific iQOO devices.</p>";
             }
         };
     </script>
